# zswap-contracts

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  package.json
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml
factory/: Cargo.toml
factory/src/: dev.rs  error.rs  lib.rs  pool.rs
integration-tests/: Cargo.toml
integration-tests/src/: tests.rs
integration-tests/tests/: burn.rs  helper.rs  mint.rs  swap.rs
manager/: Cargo.toml  deploy.sh
manager/contract/: Cargo.toml
manager/contract/src/: callback.rs  error.rs  internal.rs  lib.rs  pool.rs
manager/integration-tests/: Cargo.toml
manager/src/: callback.rs  error.rs  factory.rs  ft_account.rs  ft_receiver.rs  ft_storage.rs  internal.rs  lib.rs  nft.rs  pool.rs  utils.rs  views.rs
pool/: Cargo.toml
pool/contract/: Cargo.toml
pool/contract/src/: callback.rs  internal.rs  lib.rs  lock.rs  manager.rs  utils.rs
pool/integration-tests/: Cargo.toml
pool/src/: account.rs  callback.rs  core_trait.rs  error.rs  ft_receiver.rs  internal.rs  lib.rs  manager.rs  utils.rs
res/: zswap_factory.wasm  zswap_manager.wasm  zswap_pool.wasm
res/mock/: mock_ft.wasm
scripts/: update.sh  update3.sh
