[package]
name = "zswap-manager"
version = "1.0.0"
authors = ["DV Lab"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
hex = "0.4.3"
uint = { version = "0.9.3", default-features = false }
zswap-math-library = { path = "../library" }

# [dev-dependencies.cargo-husky]
# version = "1"
# default-features = false
# features = ["user-hooks"]
